--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,14 +5,18 @@ find_package(Qt6 REQUIRED COMPONENTS Concurrent Core OpenGLWidgets PrintSupport 
 
 qt_add_library(qwt STATIC)
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
+set_target_properties(
+    qwt
+    PROPERTIES
+        AUTOMOC ON
+        AUTORCC ON
+)
+
 
 target_include_directories(qwt
-  PUBLIC
+  INTERFACE
   ${CMAKE_CURRENT_LIST_DIR}/
-  ${PROJECT_BINARY_DIR}
+#  ${PROJECT_BINARY_DIR}/
 )
 
 file(GLOB_RECURSE QWT_SOURCES "*.cpp")
@@ -24,12 +28,13 @@ target_sources(qwt
 )
 
 target_link_libraries(qwt
-       PUBLIC
-               Qt6::Core
-               Qt6::OpenGLWidgets
-       PRIVATE
-               Qt6::Widgets
-               Qt6::Concurrent
-               Qt6::PrintSupport
-               Qt6::Svg
+    PUBLIC
+
+    PRIVATE
+        Qt6::Core
+        Qt6::OpenGLWidgets
+        Qt6::Widgets
+        Qt6::Concurrent
+        Qt6::PrintSupport
+        Qt6::Svg
 )
