--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,7 +24,7 @@ target_include_directories(qwt
 )
 
 file(GLOB_RECURSE QWT_SOURCES "*.cpp")
-file(GLOB_RECURSE QWT_HEADERS "*.hpp" ".h")
+file(GLOB_RECURSE QWT_HEADERS "*.hpp" "*.h")
 target_sources(qwt
   PRIVATE
   ${QWT_SOURCES}
